<resources>
    <string name="app_name">我的书包</string>
    <string name="ac_login_phone_edt_hint_str">请输入手机号码</string>
    <string name="ac_login_password_edt_hint_str">请输入登录密码</string>
    <string name="ac_login_password_edt_hint_agent_str">请再次确认密码</string>
    <string name="activity_login_register_str">新用户注册</string>
    <string name="activity_login_forget_str">忘记密码？</string>
    <string name="ac_register_phone_tv_str">手机号</string>
    <string name="login_code_hint_edt_str">请输入验证码</string>
    <string name="parent_student_name_hint">学生姓名</string>
    <string name="parent_student_num_hint">学号</string>
    <string name="parent_edit_hint">监护人姓名</string>
    <string name="parent_contact_number_hint">联系电话</string>
    <string name="check_image_content_str">请输入要发表的内容</string>
    <string name="go_register_str">木有账号去注册</string>
    <string name="go_login_str">已有账号去登录</string>
    <string name="affirm_password_str">确认密码</string>
    <string name="get_code_str">获取验证码</string>
    <string name="im_parent_str">我是家长</string>
    <string name="im_teacher_str">我是老师</string>
    <string name="teacher_name_str">教师姓名</string>
    <string name="school_name_str">就职学校</string>
    <string name="main_help_str">反馈与帮助</string>
    <string name="main_soft_setting">软件设置</string>
    <string name="main_account_manager">角色信息</string>
    <string name="main_account_about">关于</string>
    <string name="main_account_exit">退出</string>
    <string name="main_account_http">www.wodeshubao.com.cn</string>
    <string name="main_bottom_second_str">互联</string>
    <string name="main_bottom_first_str">百宝箱</string>
    <string name="main_bottom_third_str">日记</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>
    <string name="committed_str">所有兴趣课</string>
    <string name="three_volunteer">第三兴趣课</string>
    <string name="two_volunteer">第二兴趣课</string>
    <string name="first_volunteer">第一兴趣课</string>
    <string name="you_can_choice_the_interest_class_str">请选择你要报名的兴趣课：</string>
    <string name="open">drawerOpen</string>
    <string name="close">drawerClose</string>
</resources>
