<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/loginbg"
    android:orientation="vertical">

    <include layout="@layout/toolbar" />

    <ImageView
        android:id="@+id/activity_login_image"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_gravity="center"
        android:layout_marginTop="68dp"
        android:background="@mipmap/logo"
        android:scaleType="centerCrop" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:background="@mipmap/border"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:orientation="horizontal">

            <View
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="20dp"
                android:background="@mipmap/user_icon" />

            <EditText
                android:id="@+id/activity_login_user_name_edt"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="15dp"
                android:layout_weight="1"
                android:background="@null"
                android:hint="@string/ac_login_phone_edt_hint_str"
                android:imeOptions="actionNext"
                android:inputType="number"
                android:maxLength="11"
                android:maxLines="1"
                android:textColor="@color/black"
                android:textColorHint="@color/txt_gray"
                android:textSize="14sp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@mipmap/line_h" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:orientation="horizontal">

            <View
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="20dp"
                android:background="@mipmap/password_icon" />

            <EditText
                android:id="@+id/activity_login_user_password_edt"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="15dp"
                android:layout_weight="1"
                android:background="@null"
                android:hint="@string/ac_login_password_edt_hint_str"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:maxLength="20"
                android:textColor="@color/black"
                android:textColorHint="@color/txt_gray"
                android:textSize="14sp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">


        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/activity_login_forget_password_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:text="@string/activity_login_forget_str"
            android:textColor="@color/font_green"
            android:textSize="13sp" />
    </LinearLayout>

    <Button
        android:id="@+id/activity_login_commit_btn"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginLeft="35dp"
        android:layout_marginRight="35dp"
        android:layout_marginTop="38dp"
        android:background="@drawable/shape_ac_login_btn_back_fill"
        android:text="登录"
        android:textColor="@color/white"
        android:textSize="18sp" />

    <Space
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="43dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <View
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:layout_weight="1"
            android:background="@color/button_green" />

        <TextView
            android:id="@+id/activity_login_register_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/go_register_str"
            android:textSize="16sp" />

        <View
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:layout_weight="1"
            android:background="@color/button_green" />
    </LinearLayout>

</LinearLayout>
