<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context="bag.small.ui.activity.ParentInformationActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <include layout="@layout/toolbar" />

        <ImageView
            android:id="@+id/activity_head_image"
            android:layout_width="105dp"
            android:layout_height="105dp"
            android:layout_gravity="center"
            android:layout_marginTop="25dp"
            android:scaleType="centerCrop"
            android:src="@mipmap/photo_update_nomal" />

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            app:cardCornerRadius="10dp"
            app:cardElevation="5dp"
            app:contentPadding="8dp"
            android:background="@mipmap/border_input_bg"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="42dp"
                    android:background="@color/white"
                    android:orientation="horizontal"
                    android:paddingStart="3dp">

                    <EditText
                        android:id="@+id/activity_student_name_edt"
                        style="@style/edit_styles"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="3"
                        android:background="@color/white"
                        android:gravity="center_vertical"
                        android:hint="@string/parent_student_name_hint"
                        android:imeOptions="actionNext"
                        android:paddingEnd="0dp"
                        android:paddingStart="2dp"
                        android:textSize="16sp" />

                    <Space
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" />

                    <EditText
                        android:id="@+id/activity_student_number_edt"
                        style="@style/edit_styles"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="3"
                        android:background="@color/white"
                        android:gravity="center_vertical"
                        android:hint="@string/parent_student_num_hint"
                        android:imeOptions="actionNext"
                        android:inputType="number"
                        android:paddingEnd="0dp"
                        android:paddingStart="2dp"
                        android:textSize="16sp" />
                </LinearLayout>

                <View style="@style/view_line_gray_style" />

                <LinearLayout
                    android:id="@+id/activity_student_gender_ll"
                    style="@style/style_ll_info">

                    <TextView
                        android:id="@+id/activity_student_gender_tv"
                        android:text="性别"
                        style="@style/style_tv" />

                    <ImageView
                        style="@style/imge_down_style"
                        android:src="@mipmap/arrow_icon" />
                </LinearLayout>
                <View style="@style/view_line_gray_style" />

                <LinearLayout
                    android:id="@+id/activity_area_school_ll"
                    style="@style/style_ll_info">

                    <TextView
                        android:id="@+id/activity_area_school_tv"

                        android:text="学生区域"
                        style="@style/style_tv" />

                    <ImageView
                        style="@style/imge_down_style"
                        android:src="@mipmap/arrow_icon" />
                </LinearLayout>

                <View style="@style/view_line_gray_style" />

                <LinearLayout
                    android:id="@+id/activity_study_school_ll"
                    style="@style/style_ll_info">

                    <TextView
                        android:id="@+id/activity_study_school_tv"
                        android:background="@color/white"
                        android:text="就读学校"
                        style="@style/style_tv" />

                    <ImageView
                        style="@style/imge_down_style"
                        android:src="@mipmap/arrow_icon" />
                </LinearLayout>

                <View style="@style/view_line_gray_style" />

                <LinearLayout
                    android:id="@+id/activity_study_num_ll"
                    style="@style/style_ll_info">

                    <TextView
                        android:id="@+id/activity_study_num_tv"
                        android:background="@color/white"
                        android:text="入学时间"
                        style="@style/style_tv" />

                    <ImageView
                        style="@style/imge_down_style"
                        android:src="@mipmap/arrow_icon" />
                </LinearLayout>

                <View style="@style/view_line_gray_style" />

                <LinearLayout
                    android:id="@+id/activity_grade_ll"
                    style="@style/style_ll_info">

                    <TextView
                        android:id="@+id/activity_grade_tv"
                        android:background="@color/white"
                        android:text="就读年级"
                        style="@style/style_tv" />

                    <ImageView
                        style="@style/imge_down_style"
                        android:src="@mipmap/arrow_icon" />
                </LinearLayout>

                <View style="@style/view_line_gray_style" />

                <LinearLayout
                    android:id="@+id/activity_class_ll"
                    style="@style/style_ll_info">

                    <TextView
                        android:id="@+id/activity_class_tv"
                        android:background="@color/white"
                        android:text="就读班级"
                        style="@style/style_tv" />

                    <ImageView
                        style="@style/imge_down_style"
                        android:src="@mipmap/arrow_icon" />
                </LinearLayout>

                <View style="@style/view_line_gray_style" />

                <LinearLayout
                    android:id="@+id/activity_guardian_ll"
                    style="@style/style_ll_info">

                    <TextView
                        android:id="@+id/activity_guardian_tv"
                        android:background="@color/white"
                        android:text="监护人关系"
                        style="@style/style_tv" />

                    <ImageView
                        style="@style/imge_down_style"
                        android:src="@mipmap/arrow_icon" />
                </LinearLayout>

                <View style="@style/view_line_gray_style" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:orientation="horizontal"
                    android:paddingStart="3dp">

                    <EditText
                        android:id="@+id/activity_parent_name_edt"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_weight="1"
                        android:background="@color/white"
                        android:gravity="center_vertical"
                        android:hint="@string/parent_edit_hint"
                        android:imeOptions="actionNext"
                        android:inputType="text"
                        android:paddingEnd="0dp"
                        android:paddingStart="2dp"
                        android:textColor="@color/font_black"
                        android:textColorHint="@color/txt_gray"
                        android:textSize="16sp" />

                    <EditText
                        android:id="@+id/activity_parent_phone_edit"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_weight="1"
                        android:background="@color/white"
                        android:gravity="center_vertical"
                        android:hint="@string/parent_contact_number_hint"
                        android:imeOptions="actionNext"
                        android:inputType="phone"
                        android:paddingEnd="0dp"
                        android:paddingStart="2dp"
                        android:textColor="@color/font_black"
                        android:textColorHint="@color/txt_gray"
                        android:textSize="16sp" />

                </LinearLayout>

                <View style="@style/view_line_gray_style" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="@color/white"
                    android:orientation="horizontal"
                    android:paddingStart="3dp">

                    <EditText
                        android:id="@+id/activity_parent_verification_code_edt"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@color/white"
                        android:hint="@string/login_code_hint_edt_str"
                        android:imeOptions="actionDone"
                        android:inputType="number"
                        android:maxLength="6"
                        android:paddingEnd="0dp"
                        android:paddingStart="3dp"
                        android:textColor="@color/black"
                        android:textSize="16sp" />

                    <Button
                        android:id="@+id/activity_teacher_send_code_btn"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginEnd="5dp"
                        android:background="@color/white"
                        android:text="@string/get_code_str"
                        android:textColor="@color/button_green"
                        android:textSize="12sp" />
                </LinearLayout>
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <Button
            android:id="@+id/activity_parent_commit_btn"
            android:text="确认"
            style="@style/btn_circle_style" />
    </LinearLayout>

</ScrollView>
